Few improvements text

--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 									<div class="about-desc">
 										<span class="heading-meta">About Me</span>
 										<h2 class="colorlib-heading">Who Am I?</h2>
-										<p><strong>Hi I'm Aurelien Werenne.</strong> I recently got my Master of Science (M. Sc.) in Engineering, here in Belgium. The next step for me is to find an exciting internship abroad! Ideally, I'd like to find a place where creativity is encouraged, and used to find simple elegant solutions to unsolved complex problems. The set of problems I'd love (learn) solving is broad, as I particularly enjoy all subjects related to robotics, self-driving cars, deep learning, sensor fusion and more generally, everything mixing maths and programming. </p>
+										<p><strong>Hi I'm Aurelien Werenne.</strong> I recently got my Master of Science (M. Sc.) in Engineering, here in Belgium. The next step for me is to find an exciting internship abroad! Ideally, I'd like to find a place where creativity is encouraged, and used to find simple elegant solutions to unsolved challenging problems. The set of problems I'd love (learn) solving is broad, as I particularly enjoy all subjects related to robotics, self-driving cars, sensor fusion, deep learning and more generally, everything mixing maths and programming. </p>
 										<p>Further down you will be able to read a description of some projects I've worked on. Feel free to contact me via <a class="link-project" href="https://www.linkedin.com/in/aurelienwerenne/">my Linkedin profile</a>.</p>
 									</div>
 								</div>
@@ -170,7 +170,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 								<div class="col-md-6">
 									<image style="max-width: 100%;" src="images/img-thesis.png" />
 								</div>
-								Typically, a multi-modal neural network exploits information from different channels and in different terms (e.g. images, text, sounds, sensor measures) in the hope that the information carried by each mode is complementary, in order to improve the predictions of the neural network. Nevertheless, in realistic situations, varying levels of perturbations can occur on the data of the modes, which may decrease the quality of the inference process. An additional difficulty is that these perturbations vary between the modes and on a sample-per-sample basis. The proposed solution in this thesis is to enable the neural network to focus on the best combination of modes, i.e. the modes containing the least amount of perturbations while having the highest intrinsic informativeness for the predictive task at hand. Promising results were obtained, as an example, the graph shows how the performance (F1-score) evolves when increasing the amount of perturbations (NSR, noise-to-signal ratio) on one of the input modes. It can be observed that the performance of the neural network using our method (blue line) remains stable, whereas the performance using standard data augmentation (red line) decreases drastically. More information can be found in the report (link below).
+								Typically, a multi-modal neural network exploits information from different channels and in different terms (e.g. images, text, sounds, sensor measures) in the hope that the information carried by each mode is complementary, in order to improve the predictions of the neural network. Nevertheless, in realistic situations, varying levels of perturbations can occur on the data of the modes, which may decrease the quality of the inference process. An additional difficulty is that these perturbations vary between the modes and on a sample-per-sample basis. The novel solution proposed in this thesis enables neural networks to focus dynamically on the best combination of modes, i.e. the modes containing the least amount of perturbations while having the highest intrinsic informativeness for the predictive task at hand. Promising results were obtained, as an example, the displayed graph shows how the performance (F1-score) evolves when increasing the amount of perturbations (NSR, noise-to-signal ratio) on one of the input modes. It can be observed that the performance of the neural network equipped with our method (blue line) remains stable, whereas the performance using standard data augmentation (red line) decreases drastically. A thorough presentation of the methodology and results can be found in <a class="link-project" href="files/thesis-report.pdf">the report</a>.
 							</div>
 						</div>
 						<div class="row" style="margin-top: 10px">
@@ -192,9 +192,9 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 						</div>
 						<div class="row">
 							<div class="col-md-12">
-								<p>The objective of this project was to build two robots from scratch, whose goal are to explore unknown environments as quickly as possible. Furthermore, the robots are coupled with a program running on my computer, which receives information messages coming from the robots. Those messages are then used by the program to construct a map of the environment in real-time. A demonstration of the final result can be seen below.</p>
+								<p>The objective of this project was to build two robots from scratch, whose goal are to explore unknown environments as quickly as possible. Furthermore, the robots are coupled with a program running on my computer, which receives information messages coming from the robots. Those messages are then used by the program to construct a map of the environment in real-time. A demonstration video of the final result can be seen below.</p>
 
-								<p>I must admit I underestimated the difficulty of making a robot perform <b>robustly</b>. Despite a few moments of frustion caused by hundreds of small problems encountered during the project, it was mostly a lot of fun and a great learning experience.</p>
+								<p>I must admit I underestimated the difficulty of making a robot perform <b>robustly</b>. Despite a few moments of frustion caused by hundreds of unexpected bugs and problems, it was a lot of fun and a great learning experience!</p>
 							</div>
 						</div>
 						<div class="row" style="margin-top: 10px">
@@ -209,7 +209,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 						</div>
 						<div class="row" style="margin-top: 5px">
 							<div class="col-md-12">
-								<b>Miscellaneous skills improved</b>: Woodcraft (chassis), Soldering, Persistence
+								<b>Improved miscellaneous skills</b>: Woodcraft (chassis), Soldering, Persistence
 							</div>
 						</div>
 						<div class="row" style="margin-top: 30px; padding-left: 50px; padding-right:50px">
