Update margins paragraphs

--- a/index.html
+++ b/index.html
@@ -170,10 +170,10 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 								<div class="col-md-6">
 									<image style="max-width: 100%;" src="images/img-thesis.png" />
 								</div>
-								Typically, a multi-modal neural network exploits information from different channels and in different terms (e.g. images, text, sounds, sensor measures) in the hope that the information carried by each mode is complementary, in order to improve the predictions of the neural network. Nevertheless, in realistic situations, varying levels of perturbations can occur on the data of the modes, which may decrease the quality of the inference process. An additional difficulty is that these perturbations vary between the modes and on a sample-per-sample basis. The novel solution proposed in this thesis enables neural networks to focus dynamically on the best combination of modes, i.e. the modes containing the least amount of perturbations while having the highest intrinsic informativeness for the predictive task at hand. Promising results were obtained, as an example, the displayed graph shows how the performance (F1-score) evolves when increasing the amount of perturbations (NSR, noise-to-signal ratio) on one of the input modes. It can be observed that the performance of the neural network equipped with our method (blue line) remains stable, whereas the performance using standard data augmentation (red line) decreases drastically. A thorough presentation of the methodology and results can be found in <a class="link-project" href="files/thesis-report.pdf">the report</a>.
+								<p>Typically, a multi-modal neural network exploits information from different channels and in different terms (e.g. images, text, sounds, sensor measures) in the hope that the information carried by each mode is complementary, in order to improve the predictions of the neural network. Nevertheless, in realistic situations, varying levels of perturbations can occur on the data of the modes, which may decrease the quality of the inference process. An additional difficulty is that these perturbations vary between the modes and on a sample-per-sample basis. The novel solution proposed in this thesis enables neural networks to focus dynamically on the best combination of modes, i.e. the modes containing the least amount of perturbations while having the highest intrinsic informativeness for the predictive task at hand. Promising results were obtained, as an example, the displayed graph shows how the performance (F1-score) evolves when increasing the amount of perturbations (NSR, noise-to-signal ratio) on one of the input modes. It can be observed that the performance of the neural network equipped with our method (blue line) remains stable, whereas the performance using standard data augmentation (red line) decreases drastically. A thorough presentation of the methodology and results can be found in <a class="link-project" href="files/thesis-report.pdf">the report</a>.</p>
 							</div>
 						</div>
-						<div class="row" style="margin-top: 10px">
+						<div class="row">
 							<div class="col-md-12">
 								<b>Languages & Frameworks</b>: Python, Pytorch, Scipy, Latex
 							</div>
@@ -197,7 +197,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 								<p>I must admit I underestimated the difficulty of making a robot perform <b>robustly</b>. Despite a few moments of frustion caused by hundreds of unexpected bugs and problems, it was a lot of fun and a great learning experience!</p>
 							</div>
 						</div>
-						<div class="row" style="margin-top: 10px">
+						<div class="row">
 							<div class="col-md-12">
 								<b>Languages & Frameworks</b>: C++, Arduino, Python, Pygame, Scipy, Latex
 							</div>
