--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 							<div class="col-md-12">
 								<p>The objective of this project was to build two robots from scratch, whose goal are to explore unknown environments as quickly as possible. Furthermore, the robots are coupled with a program running on my computer, which receives information messages coming from the robots. Those messages are then used by the program to construct a map of the environment in real-time. A demonstration video of the final result can be seen below.</p>
 
-								<p>I must admit I underestimated the difficulty of making a robot perform <b>robustly</b>. Despite a few moments of frustion caused by hundreds of unexpected bugs and problems, it was a lot of fun and a great learning experience!</p>
+								<p>I must admit I underestimated the difficulty of making a robot perform <b>robustly</b>. Despite a few moments of frustion caused by unexpected bugs and problems, the project was a lot of fun and an amazing learning experience!</p>
 							</div>
 						</div>
 						<div class="row">
