--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 		<a href="#" class="js-colorlib-nav-toggle colorlib-nav-toggle" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar"><i></i></a>
 		<aside id="colorlib-aside" role="complementary" class="border js-fullheight">
 			<div class="text-center">
-				<div class="author-img" style="background-image: url(images/profile.jpeg);"></div>
+				<div class="author-img" style="background-image: url(images/profile.jpg);"></div>
 				<h1 id="colorlib-logo"><a href="index.html">Aurelien Werenne</a></h1>
 				<span style="font-size: 20px" class="parent">
 					<a target="_blank" href="https://github.com/awerenne"><i class="icon-github"></i></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
