--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 				<span style="font-size: 20px" class="parent">
 					<a target="_blank" href="https://github.com/awerenne"><i class="icon-github"></i></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 					<a target="_blank" href="https://www.linkedin.com/in/aurelienwerenne/"><i class="icon-linkedin2"></i></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-					<a target="_blank" href="files/cv.pdf"><i class="icon-file-pdf" ></i></a>
+					<a target="_blank" href="files/cv.pdf"><i class="icon-paper-clip" ></i></a>
 				</span>
 			</div>
 			<nav id="colorlib-main-menu" role="navigation" class="navbar" style="margin-top: 35px">
