--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>Aurelien Werenne</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="" />
-	<meta name="keywords" content="" />
-	<meta name="author" content="" />
+	<meta name="description" content="Portfolio Aurelien Werenne" />
+	<meta name="keywords" content="Portfolio, Deep Learning, Robotics, Engineer" />
+	<meta name="author" content="Aurelien Werenne" />
 
   <!-- Facebook and Twitter integration -->
 	<meta property="og:title" content=""/>
