--- a/index.html
+++ b/index.html
@@ -192,9 +192,9 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 						</div>
 						<div class="row">
 							<div class="col-md-12">
-								<p>The objective of this project was to build two robots from scratch, whose goal are to explore unknown environments as quickly as possible. More precisely, the robots are coupled with a program running on a computer, where the latter receives information messages coming from the robots. Those messages are then used by the program to construct a map of the environment in real-time and compute the next instruction for each robot. 
+								<p>The objective of this project was to build two robots from scratch, whose goal are to explore and map unknown environments as quickly as possible. More precisely, the robots are coupled with a program running on a computer, where the latter receives information messages coming from the robots. Those messages are then used by the program to construct a map of the environment in real-time and compute the next instruction for each robot. 
 
-								One of the main challenges was to induce a cooperative behaviour between the robots (e.g. collision avoidance, redundant work). The final system achieved on average a 30-40% speed-up with respect to the mono-robotic exploration. A demonstration video of the result can be seen below.</p>
+								One of the main challenges was to induce a cooperative behaviour between the robots (e.g. collision avoidance, redundant work). The final system achieved a 30-40% speed-up on average, with respect to the mono-robotic exploration. A demonstration video of the result can be seen below.</p>
 							</div>
 						</div>
 						<div class="row">
