--- a/index.html
+++ b/index.html
@@ -106,10 +106,10 @@
 			<div class="text-center">
 				<div class="author-img" style="background-image: url(images/profile.jpg);"></div>
 				<h1 id="colorlib-logo"><a href="index.html">Aurelien Werenne</a></h1>
-				<span style="font-size: 20px" class="parent">
+				<span style="font-size: 20px; padding-left: 30px" class="parent">
 					<a target="_blank" href="https://github.com/awerenne"><i class="icon-github"></i></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 					<a target="_blank" href="https://www.linkedin.com/in/aurelienwerenne/"><i class="icon-linkedin2"></i></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-					<a target="_blank" href="files/resume.pdf"><i class="icon-paper-clip" ></i></a>
+					<!-- <a target="_blank" href="files/resume.pdf"><i class="icon-paper-clip" ></i></a> REMOVE PADDING OF SPAN -->
 				</span>
 			</div>
 			<nav id="colorlib-main-menu" role="navigation" class="navbar" style="margin-top: 35px">
