--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 					<div style="margin-bottom: 60px">
 						<div class="row">
 							<div class="col-md-12">
-								<p><b style="font-size:17px;">Solving failing modes in Multi-Modal Deep Learning</b></p>
+								<p><b style="font-size:17px;">Improving the robustness of multi-modal deep learning systems</b></p>
 							</div>
 						</div>
 						<div class="row">
@@ -175,7 +175,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 						</div>
 						<div class="row">
 							<div class="col-md-12">
-								<b>Languages & Frameworks</b>: Python, Pytorch, Scipy, Latex
+								<b>Languages & Frameworks</b>: Python, PyTorch, Scipy, Latex
 							</div>
 						</div>
 						<div class="row" style="margin-top: 5px">
@@ -187,7 +187,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 					<div style="margin-bottom: 60px">
 						<div class="row">
 							<div class="col-md-12">
-								<p><b style="font-size:17px;">Mapping unknown environments using robots</b></p>
+								<p><b style="font-size:17px;">Mapping unknown environments using multiple robots</b></p>
 							</div>
 						</div>
 						<div class="row">
@@ -199,7 +199,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 						</div>
 						<div class="row">
 							<div class="col-md-12">
-								<b>Languages & Frameworks</b>: C++, Arduino, Python, Pygame, Scipy, Latex
+								<b>Languages & Frameworks</b>: C++, Arduino, Python, PyGame, Scipy, Latex
 							</div>
 						</div>
 						<div class="row" style="margin-top: 5px">
