--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
+	<meta name="google-site-verification" content="mJiQ05tYCMG1TYUoh0zcARGydNHiBQLa71UWeo5-NhY" />	
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>Aurelien Werenne</title>
