--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 									<div class="about-desc">
 										<span class="heading-meta">About Me</span>
 										<h2 class="colorlib-heading">Who Am I?</h2>
-										<p><strong>Hi I'm Aurelien Werenne</strong>, currently finishing a Master of Science (M. Sc.) in Computer Engineering, here in Belgium. The next and final step is to do exciting internships! Ideally, I'd like to find places where creativity is encouraged and used as a way to find simple elegant solutions to unsolved challenging problems. The set of problems I'd love (learn) solving is broad, as I particularly enjoy all subjects related to robotics, self-driving cars, sensor fusion, deep learning and more generally, everything mixing maths and programming. </p>
+										<p><strong>Hi I'm Aurelien</strong>, currently finishing a Master of Science (M. Sc.) in Computer Engineering, here in Belgium. The next and final step is to do exciting internships! Ideally, I'd like to find places where creativity is encouraged and used as a way to find simple elegant solutions to unsolved challenging problems. The set of problems I'd love (learn) solving is broad, as I particularly enjoy all subjects related to robotics, self-driving cars, sensor fusion, deep learning and more generally, everything mixing maths and programming. </p>
 										<p>Further down you will be able to read a description of some projects I've worked on. Feel free to contact me via <a class="link-project" href="https://www.linkedin.com/in/aurelienwerenne/">my Linkedin profile</a>.</p>
 									</div>
 								</div>
