--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 		<a href="#" class="js-colorlib-nav-toggle colorlib-nav-toggle" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar"><i></i></a>
 		<aside id="colorlib-aside" role="complementary" class="border js-fullheight">
 			<div class="text-center">
-				<div class="author-img" style="background-image: url(images/profile.jpg);"></div>
+				<div class="author-img" style="background-image: url(images/profile.png);"></div>
 				<h1 id="colorlib-logo"><a href="index.html">Aurelien Werenne</a></h1>
 				<span style="font-size: 20px; padding-left: 30px" class="parent">
 					<a target="_blank" href="https://github.com/awerenne"><i class="icon-github"></i></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
@@ -116,7 +116,7 @@
 			<nav id="colorlib-main-menu" role="navigation" class="navbar" style="margin-top: 35px">
 				<div id="navbar" class="collapse">
 					<ul>
-						<li><a href="#" data-nav-section="about">About</a></li>
+						<!-- <li><a href="#" data-nav-section="about">About</a></li> -->
 						<li><a href="#" data-nav-section="work">Projects</a></li>
 					</ul>
 				</div>
@@ -131,7 +131,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 		</aside>
 
 		<div id="colorlib-main">
-			<section class="colorlib-about" data-section="about">
+<!-- 			<section class="colorlib-about" data-section="about">
 				<div class="colorlib-narrow-content">
 					<div class="row">
 						<div class="col-md-12">
@@ -140,7 +140,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 									<div class="about-desc">
 										<span class="heading-meta">About Me</span>
 										<h2 class="colorlib-heading">Who Am I?</h2>
-										<p><strong>Hi I'm Aurelien</strong>, currently finishing a Master of Science (M. Sc.) in Computer Engineering, here in Belgium. The next and final step is to do exciting internships! Ideally, I'd like to find places where creativity is encouraged and used as a way to find simple elegant solutions to unsolved challenging problems. The set of problems I'd love (learn) solving is broad, as I particularly enjoy all subjects related to robotics, self-driving cars, sensor fusion, deep learning and more generally, everything mixing maths and programming. </p>
+										<p><strong>Hi I'm Aurelien</strong>, currently finishing a Master of Science (M. Sc.) in Engineering, here in Belgium. The next and final step is to do exciting internships! Ideally, I'd like to find places where creativity is encouraged and used as a way to find simple elegant solutions to unsolved challenging problems. The set of problems I'd love (learn) solving is broad, as I particularly enjoy all subjects related to robotics, self-driving cars, sensor fusion, deep learning and more generally, everything mixing maths and programming. </p>
 										<p>Further down you will be able to read a description of some projects I've worked on. Feel free to contact me via <a class="link-project" href="https://www.linkedin.com/in/aurelienwerenne/">my Linkedin profile</a>.</p>
 									</div>
 								</div>
@@ -148,7 +148,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 						</div>
 					</div>
 				</div>
-			</section>
+			</section> -->
 
 
 			<section class="colorlib-work" data-section="work">
